syntax = "proto3";

package notification;

service NotificationService {
  rpc SendEmail(SendEmailRequest) returns (SendEmailResponse);
}

message SendEmailRequest {
  string to = 1;
  string subject = 2;
  string body = 3;
}

message SendEmailResponse {
  bool success = 1;
}
